--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 Pyrocko - A seismology toolkit for Python
 ================================================================================
 
-For documentation and insallation instructions please see
+For documentation and installation instructions please see
 
          http://github.com/emolch/pyrocko/wiki
 
