--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 
 ================================================================================
 Pyrocko - A seismology toolkit for Python
+[![Build Status](https://travis-ci.org/miili/pyrocko.svg?branch=master)](https://travis-ci.org/miili/pyrocko)
 ================================================================================
 
 For documentation and installation instructions please see
