fomosto: added subcommand report
The report subcommand will generate a pdf of traces for a Green's Function
database. Added the testing function to test to report command.

--- a/src/data/fomosto_report/gfreport.tex
+++ b/src/data/fomosto_report/gfreport.tex
@@ -68,7 +68,7 @@
 \chapter*{Appendix}
 \addcontentsline{toc}{chapter}{Appendicies:}
 \- for str_id, config, mdl_path in str_info
-    \section*{Config: \VAR{str_id}}
+    \section*{Store id: \VAR{str_id}}
     \addcontentsline{toc}{section}{Model configuration for \VAR{str_id}}
     \begin{lstlisting}
         \VAR{config}
